Add encoded predictor

--- a/notebooks/ai-gutta.ipynb
+++ b/notebooks/ai-gutta.ipynb
@@ -192,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot all features to see their shape\n",
+    "# # Plot all features to see their shape\n",
     "fig, axes = plt.subplots(5, 6)\n",
     "\n",
     "for i, feature in enumerate(list(training_data.columns)):\n",
@@ -958,12 +958,19 @@
     "X_test_catboost[categorical_numerical_features] = X_test_catboost[categorical_numerical_features].astype(str)\n",
     "\n",
     "# f5 and f28 have many missing values and could be dropped for generality\n",
-    "catboost_dropped_features = ['f13']\n",
+    "catboost_dropped_features = []\n",
     "X_catboost.drop(catboost_dropped_features, axis=1, inplace=True)\n",
     "X_test_catboost.drop(catboost_dropped_features, axis=1, inplace=True)\n",
     "\n",
     "X_encoded_catboost.drop(catboost_dropped_features, axis=1, inplace=True)\n",
     "X_encoded_test_catboost.drop(catboost_dropped_features, axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training CatBoost"
    ]
   },
   {
@@ -976,14 +983,12 @@
     "categorical_features_indices += features_to_indices([*hexadecimal_features, *alphabetic_features, *binary_features, *boolean_features])\n",
     "\n",
     "categorical_features_indices = sorted(categorical_features_indices)\n",
-    "print('Categorical features:', categorical_features_indices)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Training CatBoost"
+    "print('Categorical features:', categorical_features_indices)\n",
+    "\n",
+    "catboost_dropped_indices = features_to_indices(catboost_dropped_features)\n",
+    "categorical_features_indices = [index for index in categorical_features_indices if index not in catboost_dropped_indices]\n",
+    "categorical_features_indices_after_dropping = indices_after_droping(categorical_features_indices, catboost_dropped_features)\n",
+    "print('Categorical features after dropping:', categorical_features_indices_after_dropping)"
    ]
   },
   {
@@ -997,13 +1002,6 @@
    },
    "outputs": [],
    "source": [
-    "# X_train, X_validation, y_train, y_validation = train_test_split(X_catboost, y, train_size=0.8, random_state=42)\n",
-    "\n",
-    "catboost_dropped_indices = features_to_indices(catboost_dropped_features)\n",
-    "categorical_features_indices = [index for index in categorical_features_indices if index not in catboost_dropped_indices]\n",
-    "categorical_features_indices_after_dropping = indices_after_droping(categorical_features_indices, catboost_dropped_features)\n",
-    "print('Categorical features after dropping:', categorical_features_indices_after_dropping)\n",
-    "\n",
     "catboost_model = CatBoostClassifier(\n",
     "    custom_loss=[metrics.Accuracy()],\n",
     "    random_seed=RANDOM_SEED,\n",
@@ -1035,6 +1033,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Training CatBoost (encoded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_features_indices_encoded = [1, 9, 22]\n",
+    "print('Categorical features (encoded):', categorical_features_indices_encoded)\n",
+    "\n",
+    "catboost_dropped_indices = features_to_indices(catboost_dropped_features)\n",
+    "categorical_features_indices_encoded = [index for index in categorical_features_indices_encoded if index not in catboost_dropped_indices]\n",
+    "categorical_features_indices_encoded_after_dropping = indices_after_droping(categorical_features_indices_encoded, catboost_dropped_features)\n",
+    "\n",
+    "categorical_features_indices = sorted(categorical_features_indices_encoded_after_dropping)\n",
+    "print('Categorical features after dropping (encoded):', categorical_features_indices_encoded_after_dropping)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-10-11T09:48:49.458727Z",
+     "iopub.status.busy": "2021-10-11T09:48:49.458483Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "catboost_encoded_model = CatBoostClassifier(\n",
+    "    custom_loss=[metrics.Accuracy()],\n",
+    "    random_seed=RANDOM_SEED,\n",
+    "    logging_level='Silent'\n",
+    ")\n",
+    "\n",
+    "catboost_encoded_model.fit(\n",
+    "    X_encoded_catboost, y,\n",
+    "    cat_features=categorical_features_indices_encoded_after_dropping\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(_, accuracy), (_, log_loss) = catboost_encoded_model.get_best_score()['learn'].items()\n",
+    "print(f'CatBoost classifier accuracy: {accuracy * 100:.2f}%')\n",
+    "print(f'CatBoost classifier log loss: {log_loss * 100:.2f}%')\n",
+    "\n",
+    "feature_importance = pd.DataFrame({'feature_importance': catboost_encoded_model.get_feature_importance()}, index=X_encoded_catboost.columns)\n",
+    "feature_importance.sort_values(by='feature_importance', ascending=False, inplace=True)\n",
+    "sns.barplot(data=feature_importance, x='feature_importance', y=feature_importance.index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Training CatBoost regressor\n",
     "\n",
     "We would like to se if using regression instead of classification could be beneficial."
@@ -1053,7 +1113,7 @@
     "\n",
     "catboost_regressor.fit(\n",
     "    X_catboost, y,\n",
-    "    cat_features=categorical_features_indices_after_dropping,\n",
+    "    cat_features=categorical_features_indices_after_dropping\n",
     ")"
    ]
   },
@@ -1157,25 +1217,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "categorical_features_indices_encoded = [1, 9, 22]\n",
-    "\n",
-    "print('Categorical features (encoded):', categorical_features_indices_encoded)\n",
-    "\n",
-    "\n",
-    "catboost_dropped_indices = features_to_indices(catboost_dropped_features)\n",
-    "categorical_features_indices_encoded = [index for index in categorical_features_indices_encoded if index not in catboost_dropped_indices]\n",
-    "categorical_features_indices_encoded_after_dropping = indices_after_droping(categorical_features_indices_encoded, catboost_dropped_features)\n",
-    "\n",
-    "categorical_features_indices = sorted(categorical_features_indices_encoded_after_dropping)\n",
-    "print('Categorical features after dropping (encoded):', categorical_features_indices_encoded_after_dropping)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Stacking several CatBoosts together\n",
     "k_fold = KFold(n_splits=10)\n",
     "\n",
@@ -1213,9 +1254,6 @@
     "\n",
     "X_stacking = pd.concat(models_X, axis=1)\n",
     "X_test_stacking = pd.concat(models_test_X, axis=1)\n",
-    "\n",
-    "print(X_stacking)\n",
-    "print(X_test_stacking)\n",
     "\n",
     "stacking_model = LogisticRegression()\n",
     "\n",
