--- a/notebooks/ai-gutta.ipynb
+++ b/notebooks/ai-gutta.ipynb
@@ -1308,10 +1308,10 @@
     ")\n",
     "\n",
     "hyperparameters = {\n",
-    "    'iterations': [80, 100, 120, 140, 160],\n",
-    "    'learning_rate': [0.03, 0.1, 0.2],\n",
-    "    'depth': [2, 4, 6, 8],\n",
-    "    'l2_leaf_reg': [0.2, 0.5, 1, 1.5, 2, 2.5, 3]\n",
+    "    'iterations': np.arange(100, 400, 10),\n",
+    "    'learning_rate': np.linspace(0.03, 0.2, 20),\n",
+    "    'depth': np.arange(2, 10),\n",
+    "    'l2_leaf_reg': np.linspace(0.2, 3, 20)\n",
     "}\n",
     "\n",
     "catboost_hyperparameters = RandomizedSearchCV(\n",
@@ -1326,7 +1326,7 @@
     "    return_train_score=True\n",
     ")\n",
     "\n",
-    "catboost_hyperparameters.fit(X_catboost, y, use_best_model=True)"
+    "catboost_hyperparameters.fit(X_catboost, y)"
    ]
   },
   {
@@ -1445,11 +1445,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "37c8a2de656be8ca1d97a9c7d50c80471430111670512576e74e7e519fff4ab7"
+   "hash": "513b337271411f4177ffe921e09c301a07e873c12860d03f0dc956891b1178ea"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
+   "display_name": "Python 3.8.6 64-bit ('venv': venv)",
    "name": "python3"
   },
   "language_info": {
@@ -1462,7 +1461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
