--- a/notebooks/ai-gutta.ipynb
+++ b/notebooks/ai-gutta.ipynb
@@ -1318,7 +1318,7 @@
     "    estimator=catboost_model, \n",
     "    param_distributions=hyperparameters, \n",
     "    n_iter=30, \n",
-    "    scoring='accuracy',\n",
+    "    scoring='neg_mean_squared_error',\n",
     "    cv=3, \n",
     "    verbose=2, \n",
     "    random_state=42, \n",
