--- a/notebooks/ai-gutta.ipynb
+++ b/notebooks/ai-gutta.ipynb
@@ -1314,7 +1314,7 @@
     "    'l2_leaf_reg': np.linspace(0.2, 3, 20)\n",
     "}\n",
     "\n",
-    "catboost_hyperparameters = RandomizedSearchCV(\n",
+    "catboost_cv_model = RandomizedSearchCV(\n",
     "    estimator=catboost_model, \n",
     "    param_distributions=hyperparameters, \n",
     "    n_iter=40, \n",
@@ -1326,7 +1326,7 @@
     "    return_train_score=True\n",
     ")\n",
     "\n",
-    "catboost_hyperparameters.fit(X_catboost, y)"
+    "catboost_cv_model.fit(X_catboost, y)"
    ]
   },
   {
@@ -1342,7 +1342,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "catboost_hyperparameters.best_params_"
+    "catboost_cv_model.best_params_\n",
+    "# {'learning_rate': 0.15, 'l2_leaf_reg': 0.5, 'iterations': 250, 'depth': 2}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_catboost_model = CatBoostClassifier(\n",
+    "    custom_loss=[metrics.Accuracy()],\n",
+    "    cat_features=categorical_features_indices_after_dropping,\n",
+    "    random_seed=RANDOM_SEED,\n",
+    "    logging_level='Silent', \n",
+    "    **catboost_cv_model.best_params_\n",
+    ")\n",
+    "best_catboost_model.fit(X_catboost, y)\n",
+    "\n",
+    "(_, accuracy), (_, log_loss) = best_catboost_model.get_best_score()['learn'].items()\n",
+    "print(f'CatBoost classifier accuracy: {accuracy * 100:.2f}%')\n",
+    "print(f'CatBoost classifier log loss: {log_loss * 100:.2f}%')"
    ]
   },
   {
@@ -1363,7 +1384,7 @@
    "outputs": [],
    "source": [
     "# CatBoost\n",
-    "y_pred = catboost_hyperparameters.predict_proba(X_test_catboost)\n",
+    "y_pred = best_catboost_model.predict_proba(X_test_catboost)\n",
     "predictions = pd.DataFrame({'id': X_test_catboost.index, 'target': y_pred[:,1]})\n",
     "\n",
     "predictions.to_csv('../output/catboost.txt', index=False)\n",
@@ -1404,10 +1425,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sorted_feature_importance = catboost_model.get_feature_importance()\n",
+    "sorted_feature_importance = best_catboost_model.get_feature_importance()\n",
     "explainer = shap.TreeExplainer(catboost_model)\n",
-    "shap_values = explainer.shap_values(X_test)\n",
-    "shap.summary_plot(shap_values, X_test, max_display=X_test.shape[1])"
+    "shap_values = explainer.shap_values(X_test_catboost)\n",
+    "shap.summary_plot(shap_values, X_test_catboost, max_display=X_test.shape[1])"
    ]
   },
   {
@@ -1430,7 +1451,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ConfusionMatrixDisplay.from_estimator(catboost_model, X, y)\n",
+    "from sklearn.metrics import plot_confusion_matrix\n",
+    "plot_confusion_matrix(best_catboost_model, X_catboost, y)\n",
     "plt.show()"
    ]
   },
