Check if stacking works with XGB as well

--- a/notebooks/ai-gutta.ipynb
+++ b/notebooks/ai-gutta.ipynb
@@ -3426,7 +3426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -3435,7 +3435,16 @@
      "text": [
       "Training model: cb_normal (CatBoostClassifier) with 10 splits.\n",
       "Training model: cb_encoded (CatBoostClassifier) with 10 splits.\n",
-      "Stacking accuracy: 80.00%\n"
+      "Training model: xgb (XGBClassifier) with 10 splits.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n"
      ]
     }
    ],
