--- a/notebooks/ai-gutta.ipynb
+++ b/notebooks/ai-gutta.ipynb
@@ -5073,7 +5073,7 @@
    "outputs": [],
    "source": [
     "sorted_feature_importance = best_catboost_model.get_feature_importance()\n",
-    "explainer = shap.TreeExplainer(catboost_model)\n",
+    "explainer = shap.TreeExplainer(best_catboost_model)\n",
     "shap_values = explainer.shap_values(X_test_catboost)\n",
     "shap.summary_plot(shap_values, X_test_catboost, max_display=X_test.shape[1])"
    ]
@@ -5117,7 +5117,7 @@
    "hash": "513b337271411f4177ffe921e09c301a07e873c12860d03f0dc956891b1178ea"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit ('venv': venv)",
+   "display_name": "Python 3.8.6 64-bit ('venv': venv)",
    "name": "python3"
   },
   "language_info": {
