--- a/notebooks/catboost.ipynb
+++ b/notebooks/catboost.ipynb
@@ -9,27 +9,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in /home/nicklas/repos/artificial-intelligence/TDT05-classification-project/venv/lib/python3.8/site-packages (1.3.3)\n",
-      "Requirement already satisfied: numpy>=1.17.3 in /home/nicklas/repos/artificial-intelligence/TDT05-classification-project/venv/lib/python3.8/site-packages (from pandas) (1.19.5)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in /home/nicklas/repos/artificial-intelligence/TDT05-classification-project/venv/lib/python3.8/site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2017.3 in /home/nicklas/repos/artificial-intelligence/TDT05-classification-project/venv/lib/python3.8/site-packages (from pandas) (2021.1)\n",
-      "Requirement already satisfied: six>=1.5 in /home/nicklas/repos/artificial-intelligence/TDT05-classification-project/venv/lib/python3.8/site-packages (from python-dateutil>=2.7.3->pandas) (1.15.0)\n",
-      "Requirement already satisfied: numpy in /home/nicklas/repos/artificial-intelligence/TDT05-classification-project/venv/lib/python3.8/site-packages (1.19.5)\n",
-      "Requirement already satisfied: catboost in /home/nicklas/repos/artificial-intelligence/TDT05-classification-project/venv/lib/python3.8/site-packages (0.26.1)\n",
-      "Requirement already satisfied: matplotlib in /home/nicklas/repos/artificial-intelligence/TDT05-classification-project/venv/lib/python3.8/site-packages (from catboost) (3.4.3)\n",
-      "Requirement already satisfied: six in /home/nicklas/repos/artificial-intelligence/TDT05-classification-project/venv/lib/python3.8/site-packages (from catboost) (1.15.0)\n",
-      "Requirement already satisfied: pandas>=0.24.0 in /home/nicklas/repos/artificial-intelligence/TDT05-classification-project/venv/lib/python3.8/site-packages (from catboost) (1.3.3)\n",
-      "Requirement already satisfied: graphviz in /home/nicklas/repos/artificial-intelligence/TDT05-classification-project/venv/lib/python3.8/site-packages (from catboost) (0.17)\n",
-      "Requirement already satisfied: plotly in /home/nicklas/repos/artificial-intelligence/TDT05-classification-project/venv/lib/python3.8/site-packages (from catboost) (5.3.1)\n",
-      "Requirement already satisfied: scipy in /home/nicklas/repos/artificial-intelligence/TDT05-classification-project/venv/lib/python3.8/site-packages (from catboost) (1.7.1)\n",
-      "Requirement already satisfied: numpy>=1.16.0 in /home/nicklas/repos/artificial-intelligence/TDT05-classification-project/venv/lib/python3.8/site-packages (from catboost) (1.19.5)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in /home/nicklas/repos/artificial-intelligence/TDT05-classification-project/venv/lib/python3.8/site-packages (from pandas>=0.24.0->catboost) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2017.3 in /home/nicklas/repos/artificial-intelligence/TDT05-classification-project/venv/lib/python3.8/site-packages (from pandas>=0.24.0->catboost) (2021.1)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/nicklas/repos/artificial-intelligence/TDT05-classification-project/venv/lib/python3.8/site-packages (from matplotlib->catboost) (0.10.0)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /home/nicklas/repos/artificial-intelligence/TDT05-classification-project/venv/lib/python3.8/site-packages (from matplotlib->catboost) (8.3.2)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/nicklas/repos/artificial-intelligence/TDT05-classification-project/venv/lib/python3.8/site-packages (from matplotlib->catboost) (1.3.2)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in /home/nicklas/repos/artificial-intelligence/TDT05-classification-project/venv/lib/python3.8/site-packages (from matplotlib->catboost) (2.4.7)\n",
-      "Requirement already satisfied: tenacity>=6.2.0 in /home/nicklas/repos/artificial-intelligence/TDT05-classification-project/venv/lib/python3.8/site-packages (from plotly->catboost) (8.0.1)\n"
+      "Requirement already satisfied: pandas in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (1.3.3)\n",
+      "Requirement already satisfied: pytz>=2017.3 in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (from pandas) (2021.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (from pandas) (1.19.5)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (from python-dateutil>=2.7.3->pandas) (1.15.0)\n",
+      "\u001b[33mWARNING: You are using pip version 21.1.1; however, version 21.3 is available.\n",
+      "You should consider upgrading via the '/Users/magnus/repos/TDT05-classification-project/venv/bin/python -m pip install --upgrade pip' command.\u001b[0m\n",
+      "Requirement already satisfied: numpy in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (1.19.5)\n",
+      "\u001b[33mWARNING: You are using pip version 21.1.1; however, version 21.3 is available.\n",
+      "You should consider upgrading via the '/Users/magnus/repos/TDT05-classification-project/venv/bin/python -m pip install --upgrade pip' command.\u001b[0m\n",
+      "Requirement already satisfied: catboost in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (0.26.1)\n",
+      "Requirement already satisfied: matplotlib in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (from catboost) (3.4.3)\n",
+      "Requirement already satisfied: numpy>=1.16.0 in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (from catboost) (1.19.5)\n",
+      "Requirement already satisfied: pandas>=0.24.0 in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (from catboost) (1.3.3)\n",
+      "Requirement already satisfied: plotly in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (from catboost) (5.3.1)\n",
+      "Requirement already satisfied: scipy in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (from catboost) (1.7.1)\n",
+      "Requirement already satisfied: six in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (from catboost) (1.15.0)\n",
+      "Requirement already satisfied: graphviz in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (from catboost) (0.17)\n",
+      "Requirement already satisfied: pytz>=2017.3 in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (from pandas>=0.24.0->catboost) (2021.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (from pandas>=0.24.0->catboost) (2.8.2)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (from matplotlib->catboost) (0.10.0)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (from matplotlib->catboost) (2.4.7)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (from matplotlib->catboost) (1.3.2)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (from matplotlib->catboost) (8.3.2)\n",
+      "Requirement already satisfied: tenacity>=6.2.0 in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (from plotly->catboost) (8.0.1)\n",
+      "\u001b[33mWARNING: You are using pip version 21.1.1; however, version 21.3 is available.\n",
+      "You should consider upgrading via the '/Users/magnus/repos/TDT05-classification-project/venv/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
      ]
     }
    ],
@@ -458,7 +464,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_25970/1647017917.py:9: FutureWarning: Automatic reindexing on DataFrame vs Series comparisons is deprecated and will raise ValueError in a future version.  Do `left, right = left.align(right, axis=1, copy=False)` before e.g. `left == right`\n",
+      "/var/folders/x0/3_dctplx2qz9mcytvtkt1d4m0000gn/T/ipykernel_23328/1647017917.py:9: FutureWarning: Automatic reindexing on DataFrame vs Series comparisons is deprecated and will raise ValueError in a future version.  Do `left, right = left.align(right, axis=1, copy=False)` before e.g. `left == right`\n",
       "  training_data = training_data[~(training_data > (Q3 + 1.5 * IQR)).any(axis=1)]\n"
      ]
     }
@@ -603,8 +609,7 @@
    "hash": "513b337271411f4177ffe921e09c301a07e873c12860d03f0dc956891b1178ea"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
+   "display_name": "Python 3.8.6 64-bit ('venv': venv)",
    "name": "python3"
   },
   "language_info": {
@@ -617,7 +622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
